# gdpr-obfuscator

./: .coveragerc  .deepsource.toml  .gitignore  .gitmodules  Makefile  NOTES.md  README.md  TODO.md  cli.py  main.py  pyproject.toml
.github/workflows/: main.yml
examples/: local.py
gdpr-obfuscator/: write.py
gdpr_obfuscator/: __init__.py  logger.py  obfuscate.py  read.py  utils.py  write.py
obfuscator/: __init__.py  csv_reader.py  csv_writer.py  logger.py  obfuscate.py  read.py  utils.py  write.py
src/: csv_reader.py
test/: test_cli.py  test_core.py  test_csv_reader.py  test_csv_writer.py  test_init.py  test_obfuscator.py  test_read.py  test_write.py
test/data/: README  large_dataset.csv  mock_data.csv
