[project]
name = "gdpr-obfuscator"
version = "0.1.0"
description = "A Python library designed to detect and remove Personally Identifiable Information (PII) from CSV files stored in an AWS S3 bucket."
authors = [
    {name = "Alex Schofield",email = "git@ajschof.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "gdpr-obfuscator", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
