[project]
name = "gdpr-obfuscator"
version = "0.1.1"
description = "A Python library designed to detect and remove Personally Identifiable Information (PII) from CSV files stored in an AWS S3 bucket."
authors = [{ name = "Alex Schofield", email = "git@ajschof.me>"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["tabulate (>=0.9.0,<0.10.0)", "boto3 (>=1.36.22,<2.0.0)"]

[tool.poetry]
package-mode = true
packages = [
    { include = "gdpr_obfuscator"}
]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-cov = "^6.0.0"
moto = "^5.0.28"
safety = "^3.3.0"
black = "^25.1.0"
pytest-testdox = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
